k8s/jenkins/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
  labels:
    app: jenkins
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins-master
